# Macforge3D

./: .coverage  .gitignore  COMPREHENSIVE_IMPROVEMENTS_REPORT.md  CORRECTION_FINALE.md  CORRECTION_FINALE_DEFINITIVE.md  CORRECTION_REPORT.md  CORRECTION_TOTALE_FINALE.md  Fix_Dependencies_GUI.command  IMPROVEMENTS.md  INSTALL_ON_MAC.sh  INSTALL_ON_MAC_GUI.sh  INSTALL_PROFESSIONAL_GUI.sh  Launch_Professional_GUI.command  MacForge3D_Launcher_GUI_Smart.command  MacForge3D_Professional_GUI.py  Package.swift  RAPPORT_AMELIORATIONS.md  RAPPORT_AMELIORATIONS_FINALES.md  RAPPORT_FINAL_TESTS_AMELIORATIONS.md  README.en.md  README.md  README_macOS.md  READY_FOR_MACOS.md  TEST_MACOS.sh  coverage.xml  demo_complete_enhancements.py  demo_comprehensive_improvements.py  demo_enhancements.py  demo_improvements.py  demo_improvements_advanced.py  demo_new_features.py  download_gui_page.html  download_page.html  download_to_desktop.sh  install_to_desktop.sh  launcher.py  launcher_macos.py  launcher_ultra_performance.py  mypy.ini  pytest.ini  (+11 more)
Python/: macforge3d_simple_gui.py  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements-light.txt  requirements.txt  test_all_modules.py
Python/Examples/: test_mesh_processor.py  test_photogrammetry.py  test_text_3d.py
Python/ai_models/: advanced_diagnostics.py  advanced_logging.py  advanced_memory_processor.py  animation_exporter.py  audio_to_3d.py  auto_optimizer.py  cache_extensions.py  cloud_integration.py  cluster_manager.py  custom_compression.py  diffusion_3d.py  enhanced_cache_system.py  evaluate_mesh_enhancer.py  (+28 more)
(+373 files in other folders)
